--- a/plugin/options.html
+++ b/plugin/options.html
@@ -7,7 +7,7 @@
 <body>
 
 <label for="text_input"></label>
-<textarea class = "text_input" id="text_input"></textarea>
+<textarea id="text_input"></textarea>
 
 
 
