alwaysDe → multipleLangs (changes default to alwaysDe)

--- a/plugin/options.html
+++ b/plugin/options.html
@@ -24,8 +24,8 @@
     <textarea id="text_input_en"></textarea>
 
     <div>
-        <label for="always_replace_de">Nutze immer die deutschen Vertauschungen:</label>
-        <input type="checkbox" id="always_replace_de">
+        <label for="multiple-langs">Erlaube unterschiedliche Sprachen (sonst wird immer angenommen, dass der Text deutsch ist):</label>
+        <input type="checkbox" id="multiple-langs">
     </div>
 
     <div id="status"></div>
