--- a/plugin/options.html
+++ b/plugin/options.html
@@ -30,8 +30,8 @@
 
     <div id="status"></div>
 
-    <button id="save">Save</button>
-    <button id="reset">Reset</button>
+    <button id="save">Reset</button>
+    <button id="reset">Save</button>
 
     <script src="data.js"></script>
     <script src="options.js"></script>
