--- a/plugin/options.html
+++ b/plugin/options.html
@@ -50,5 +50,6 @@
 
     <script src="data.js"></script>
     <script src="options.js"></script>
+    <script src="https://cdn.jsdelivr.net/pyodide/v0.18.1/full/"></script>
 </body>
 </html>
